--- a/src/assets/scss/partials/_root.scss
+++ b/src/assets/scss/partials/_root.scss
@@ -19,7 +19,7 @@ html {
 }
 
 body {
-  overflow-y: scroll;
+  overflow-y: hidden;
   background-color: $wsBg;
   font-family: $font;
   color: $wsFg;
