--- a/src/assets/scss/partials/_workspace.scss
+++ b/src/assets/scss/partials/_workspace.scss
@@ -11,6 +11,7 @@ aside {
     width: 220px;
     padding: 10px 0 0 10px;
     overflow-y: auto;
+    max-height: 100%;
 
     header,
     .tool-frame > .tool-frame-header {
